gdc-sandbox-workshop/pa-track/lab-03-policy-guardrails/manifests/templates/k8sdisallowhostpath-template.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostpath
  annotations:
    description: >-
      Disallows hostPath volume mounts in Pod specifications to prevent
      containers from escaping isolation or accessing underlying host filesystem.
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostPath
      validation:
        openAPIV3Schema:
          type: object
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowhostpath

        violation[{"msg": msg}] {
          volume := input.review.object.spec.volumes[_]
          volume.hostPath
          msg := sprintf("Volume '%v' uses forbidden hostPath volume source '%v'. HostPath mounts are strictly disallowed in GDC tenant namespaces.", [volume.name, volume.hostPath.path])
        }
