gdc-sandbox-workshop/pa-track/lab-03-policy-guardrails/manifests/templates/k8srequiredregistry-template.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredregistry
  annotations:
    description: >-
      Requires container images to originate from an approved set of registry
      prefixes (e.g. internal Harbor registry in GDC Air-Gapped).
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredRegistry
      validation:
        openAPIV3Schema:
          type: object
          properties:
            registries:
              type: array
              description: "List of approved registry prefixes (e.g. harbor.zone1.google.gdch.test/)."
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredregistry

        violation[{"msg": msg}] {
          container := get_containers[_]
          satisfied := [good | repo := input.parameters.registries[_]; good := startswith(container.image, repo)]
          not any(satisfied)
          msg := sprintf("Container '%v' has an untrusted image '%v'. Images must originate from an approved registry prefix: %v", [container.name, container.image, input.parameters.registries])
        }

        get_containers[container] {
          container := input.review.object.spec.containers[_]
        }
        get_containers[container] {
          container := input.review.object.spec.initContainers[_]
        }
        get_containers[container] {
          container := input.review.object.spec.ephemeralContainers[_]
        }
