gdc-sandbox-workshop/pa-track/lab-03-policy-guardrails/manifests/templates/k8srequiredresources-template.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
  annotations:
    description: >-
      Requires all containers to specify CPU and memory requests and limits
      to prevent resource starvation and ensure QoS predictability in tenant namespaces.
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources
      validation:
        openAPIV3Schema:
          type: object
          properties:
            resources:
              type: array
              description: "List of required resource types (e.g. ['cpu', 'memory'])."
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresources

        missing_resources[{"container": container.name, "missing": missing}] {
          container := get_containers[_]
          provided_requests := object.get(object.get(container, "resources", {}), "requests", {})
          required_res := get_required_resources[_]
          not provided_requests[required_res]
          missing := sprintf("resources.requests.%v", [required_res])
        }

        missing_resources[{"container": container.name, "missing": missing}] {
          container := get_containers[_]
          provided_limits := object.get(object.get(container, "resources", {}), "limits", {})
          required_res := get_required_resources[_]
          not provided_limits[required_res]
          missing := sprintf("resources.limits.%v", [required_res])
        }

        violation[{"msg": msg}] {
          item := missing_resources[_]
          msg := sprintf("Container '%v' is missing required resource definition '%v'. Both requests and limits for CPU and memory must be defined.", [item.container, item.missing])
        }

        get_required_resources = res {
          res := input.parameters.resources
        }
        get_required_resources = ["cpu", "memory"] {
          not input.parameters.resources
        }

        get_containers[container] {
          container := input.review.object.spec.containers[_]
        }
        get_containers[container] {
          container := input.review.object.spec.initContainers[_]
        }
        get_containers[container] {
          container := input.review.object.spec.ephemeralContainers[_]
        }
